<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">폴짝 - 칭찬 도장 모으기</string>
    <string name="menu_main">메인</string>
    <string name="menu_coupon">쿠폰</string>
    <string name="menu_alarm">알림</string>
    <string name="menu_mypage">마이페이지</string>
    <string name="viewpager_indicator"> / %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="common_kid">아이</string>
    <string name="common_protector">보호자</string>
    <string name="common_polzzak">폴짝</string>
    <string name="common_next">다음</string>
    <string name="common_prev">이전</string>
    <string name="common_do_start">시작하기</string>
    <string name="common_do_later">나중에 할게요</string>
    <string name="common_search_kid">아이 찾기</string>
    <string name="common_search_parent">보호자 찾기</string>
    <string name="common_cancel_request">요청 취소</string>
    <string name="common_cancel">취소</string>
    <string name="common_close">닫기</string>
    <string name="common_request_link">연동 신청</string>
    <string name="common_accept">수락</string>
    <string name="common_reject">거절</string>
    <string name="common_notification">알림</string>
    <string name="common_notice">공지사항</string>
    <string name="common_expire_access_token">로그아웃 되었어요.\n다시 로그인 해주세요!</string>
    <string name="common_need_to_update">최신 버전으로 업데이트가 필요해요!</string>
    <string name="splash_text1">참 잘했어요 도장 쾅</string>
    <string name="splash_text2">폴짝!</string>
    <string name="login_title">참 잘 했어요 도장 쾅!</string>
    <string name="login_content">미션을 수행하고 칭찬 도장을 모으며\n폴짝 성장해요</string>
    <string name="login_social_guide">다음 소셜 계정으로 시작하기</string>
    <string name="login_last_login">마지막으로\n로그인한 계정이에요</string>
    <string name="login_loading_content">폴짝의 세계로!</string>
    <string name="common_snackbar_back_pressed_message">한 번 더 누르면 앱이 종료됩니다.</string>
    <string name="common_snackbar_network_error">네트워크 상태 확인 후 다시 시도해주세요.</string>
    <string name="common_snackbar_api_error">요청에 실패하였습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="signup_select_type_guide_title">어떤 회원으로 활동하시겠어요?</string>
    <string name="signup_select_type_guide_content">나중에 변경이 불가하니 신중하게 선택해 주세요</string>
    <string name="signup_select_type_parent_card_title">보호자 회원</string>
    <string name="signup_select_type_parent_card_content">칭찬 도장을\n찍어주고 싶어요!</string>
    <string name="signup_select_type_parent_card_content_highlight">찍어주고</string>
    <string name="signup_select_type_kid_card_title">아이 회원</string>
    <string name="signup_select_type_kid_card_content">칭찬 도장을\n받고 싶어요!</string>
    <string name="signup_select_type_kid_card_content_highlight">받고</string>
    <string name="signup_select_parent_type_guide_title">함께 활동할 아이와의\n가족관계를 알려주세요</string>
    <string name="signup_select_parent_type_guide_content">설정한 가족관계는 뱃지로 설정돼요\n나중에 변경이 불가하니 신중하게 선택해 주세요</string>
    <string name="signup_select_parent_type_default">선택해주세요</string>
    <string name="signup_set_nickname_guide_title">닉네임을 설정해주세요</string>
    <string name="signup_set_nickname_guide_content">나중에 자유롭게 수정할 수 있어요</string>
    <string name="signup_set_nickname_pattern_guide">한글, 영문(대소문자 구별), 숫자 사용 가능 / 특수 문자, 공백 불가</string>
    <string name="signup_set_nickname_check_validation">중복 확인</string>
    <string name="signup_set_nickname_input_hint">닉네임을 입력해주세요</string>
    <string name="signup_select_profile_image_guide_title">프로필 사진을 설정해주세요</string>
    <string name="signup_select_profile_image_guide_content">나중에 설정해도 괜찮아요\n미설정 시 기본 사진으로 설정돼요</string>
    <string name="signup_complete">회원가입 완료</string>
    <string name="signup_terms_of_service_guide_title">먼저 약관 동의가 필요해요</string>
    <string name="signup_terms_of_service_agree_all">모두 동의</string>
    <string name="signup_terms_of_service_agree_service">서비스 이용약관에 동의합니다.</string>
    <string name="signup_terms_of_service_agree_privacy">개인정보처리방침에 동의합니다.</string>
    <string name="signup_loading" tools:ignore="TypographyEllipsis">회원가입 처리 중 ...</string>
    <string name="signup_nickname_check_validation_btn_check">중복 확인</string>
    <string name="signup_nickname_check_validation_btn_complete">사용 가능</string>
    <string name="nickname_check_validation_duplicated_nickname">이미 사용되고 있는 닉네임이에요</string>
    <string name="nickname_check_validation_possible">사용 가능한 닉네임이에요</string>
    <string name="nickname_check_validation_under_minimum_length">최소 2글자로 설정해주세요</string>
    <string name="nickname_check_validation_over_maximum_length">10자까지만 쓸 수 있어요</string>
    <string name="nickname_check_validation_invalid_char">특수문자(공백)는 쓸 수 없어요</string>
    <string name="on_boarding_kid_first_title">폴짝!\n회원이 되신 것을 환영해요</string>
    <string name="on_boarding_kid_first_content">칭찬 도장을 모으며\n폴짝! 성장해봐요</string>
    <string name="on_boarding_kid_second_title">먼저 보호자와 연동이 필요해요!</string>
    <string name="on_boarding_kid_second_content">보호자와 연동해야\n도장판을 받을 수 있어요</string>
    <string name="on_boarding_kid_third_title">보호자와 함께\n도장판을 만들어보세요!</string>
    <string name="on_boarding_kid_third_content">갖고 싶은 선물을 정하고\n선물을 얻기 위한 미션을 정해보세요</string>
    <string name="on_boarding_kid_fourth_title">도장판을 다 모으면\n선물 쿠폰이 발행돼요!</string>
    <string name="on_boarding_kid_fourth_content">수고했어요.\n원하는 게 있다면 도장판을 또 생성해봐요!</string>
    <string name="on_boarding_kid_fifth_title">누가누가\n제일 높이 올라갈까!</string>
    <string name="on_boarding_kid_fifth_content">포인트를 모아서\n계단을 폴짝! 올라갈 수 있어요</string>
    <string name="on_boarding_parent_first_title">폴짝!\n회원이 되신 것을 환영해요</string>
    <string name="on_boarding_parent_first_content">칭찬 도장을 모으며\n폴짝! 성장해봐요</string>
    <string name="on_boarding_parent_second_title">먼저 아이와 연동이 필요해요!</string>
    <string name="on_boarding_parent_second_content">아이와 연동을 해야\n도장판을 만들어 줄 수 있어요</string>
    <string name="on_boarding_parent_third_title">아이와 함께\n도장판을 만들어보세요!</string>
    <string name="on_boarding_parent_third_content">아이가 갖고 싶은 선물을 정하고\n함께 미션을 만들어보세요.</string>
    <string name="on_boarding_parent_fourth_title">도장판을 다 모으면\n선물 쿠폰을 발행해주세요!</string>
    <string name="on_boarding_parent_fourth_content">아이가 열심히 노력했어요.\n또 다른 도장판으로 동기부여를 해주세요!</string>
    <string name="on_boarding_parent_fifth_title">열심히 활동하면\n포인트가 쌓여요!</string>
    <string name="on_boarding_parent_fifth_content">아이와 열심히 활동하면\n계단을 폴짝! 올라갈 수 있어요</string>
    <string name="link_dialog_btn_negative">아니요</string>
    <string name="link_dialog_btn_positive_delete_link">네, 해제할래요</string>
    <string name="link_dialog_btn_positive_reject_request">네, 거절할래요</string>
    <string name="link_dialog_btn_positive_approve_request">네, 좋아요!</string>
    <string name="link_dialog_btn_positive_cancel_request">네, 취소할래요</string>
    <string name="link_dialog_btn_positive_request_link">네, 좋아요!</string>
    <string name="link_dialog_cancel_request_content">님에게 보낸\n연동 요청을 취소하시겠어요?</string>
    <string name="link_dialog_request_content">님에게\n연동 요청을 보낼까요?</string>
    <string name="link_dialog_delete_link_content">님과\n연동을 해제하시겠어요?</string>
    <string name="link_dialog_approve_request_content">님의\n연동 요청을 수락하시겠어요?</string>
    <string name="link_dialog_reject_request_content">님의\n연동 요청을 거절하시겠어요?</string>
    <string name="link_cancel_request_success_message">요청이 취소됐어요</string>
    <string name="search_title">%s 찾기</string>
    <string name="search_main_hint">%s 닉네임 검색</string>
    <string name="search_main_kid_content">칭찬 도장판을 받으려면\n보호자와 연동이 필요해요</string>
    <string name="search_main_parent_content">칭찬 도장판을 만들려면\n아이와 연동이 필요해요</string>
    <string name="search_main_header_text">요청 보낸 목록</string>
    <string name="search_main_empty_text">보낸 요청이 없어요</string>
    <string name="search_main_search_complete">%s 찾기 완료</string>
    <string name="search_main_sent_request_error_content">목록을 불러오는 데에 실패했어요\n다시 시도해주세요!</string>
    <string name="search_request_guide_text">연동된 %s에게\n칭찬 도장판을 만들어 줄 수 있어요</string>
    <string name="search_request_empty_text">%s님을\n찾을 수 없어요</string>
    <string name="search_request_loading_text">%s님을\n열심히 찾는 중이에요</string>
    <string name="search_request_btn_cancel_request">앗 실수, 요청 취소 할래요</string>
    <string name="search_request_request_complete">연동 요청 완료!</string>
    <string name="search_request_request_to_received">현재 단계에서는 해당 회원에게 요청이 불가해요</string>
    <string name="link_management_title">연동 관리</string>
    <string name="link_management_tab_link">연동 목록</string>
    <string name="link_management_tab_received">받은 요청</string>
    <string name="link_management_tab_sent">보낸 요청</string>
    <string name="link_management_empty_link">연동된 %s가 없어요</string>
    <string name="link_management_empty_received">받은 요청이 없어요</string>
    <string name="link_management_empty_sent">보낸 요청이 없어요</string>
    <string name="link_management_main_hint">%s 추가</string>
    <string name="link_management_request_hint">닉네임 검색</string>
    <string name="link_management_request_to_received">이미 해당 회원에게 연동 요청을 받았어요</string>
    <string name="link_management_search_linked">이미 연동됐어요</string>
    <string name="notification_btn_accepted">수락했어요</string>
    <string name="notification_btn_rejected">거절했어요</string>
    <string name="notification_empty_content">알림이 없어요</string>
    <string name="notification_setting_header_title">알림 설정</string>
    <string name="notification_setting_all_title">모든 알림</string>
    <string name="notification_setting_family_request_title">연동 알림</string>
    <string name="notification_setting_family_request_content">연동 요청이 들어오거나 연동에 성공한 경우 알림을 받을래요</string>
    <string name="notification_setting_level_title">레벨 알림</string>
    <string name="notification_setting_level_content">레벨 변동에 대한 알림을 받을래요</string>
    <string name="notification_setting_stamp_request_title">도장요청 알림</string>
    <string name="notification_setting_stamp_request_content">아이의 도장 요청 알림을 받을래요</string>
    <string name="notification_setting_reward_request_title">선물 조르기 알림</string>
    <string name="notification_setting_reward_request_content">아이의 선물 조르기 알림을 받을래요</string>
    <string name="notification_setting_stamp_board_complete_title">도장판 완성 알림</string>
    <string name="notification_setting_stamp_board_complete_content">도장판이 모두 채워졌다는 알림을 받을래요</string>
    <string name="notification_setting_receive_gift_title">선물 수령 알림</string>
    <string name="notification_setting_receive_gift_content">아이가 선물을 받았다고 보내는 감사 인사를 받을래요</string>
    <string name="notification_setting_reward_fail_title">선물 약속 미이행 알림</string>
    <string name="notification_setting_reward_fail_content">선물 약속 날짜를 어겼다는 알림을 받을래요</string>
    <string name="notification_setting_created_stamp_board_title">새로운 도장판 알림</string>
    <string name="notification_setting_created_stamp_board_content">새로운 도장판이 만들어졌다는 알림을 받을래요</string>
    <string name="notification_setting_issued_coupon_title">쿠폰 발급 알림</string>
    <string name="notification_setting_issued_coupon_content">보호자가 선물 쿠폰을 발급해줬다는 알림을 받을래요</string>
    <string name="notification_setting_rewarded_title">선물 수령 알림</string>
    <string name="notification_setting_rewarded_content">아이가 선물을 받았다고 보내는 감사 인사를 받을래요</string>
    <string name="notification_setting_rewarded_request_title">선물 전달 확인 알림</string>
    <string name="notification_setting_rewarded_request_content">선물 전달이 완료되었는지 확인하는 알림을 받을래요</string>
    <string name="permission_manager_dialog_btn_positive_text">설정하기</string>
    <string name="permission_manager_dialog_btn_negative_text">취소</string>
    <string name="permission_manager_dialog_storage_title">앱 설정에서 ‘저장소’ 권한을 허용해 주세요</string>
    <string name="permission_manager_dialog_notification_title">앱 설정에서 알림 권한을 허용해주세요</string>
    <string name="my_notice_empty">업데이트된 소식이 없어요</string>
    <string name="my_account_linked_kids_count">연동된 아이 %d명</string>
    <string name="my_account_linked_protectors_count">연동된 보호자 %d명</string>
    <string name="my_account_management">계정관리</string>
    <string name="my_account_management_logout">로그아웃</string>
    <string name="my_account_management_delete_account">회원탈퇴</string>
    <string name="my_account_management_logout_dialog_title">정말로 로그아웃 하시겠어요?</string>
</resources>