<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/tvGuideTitle"
                style="@style/title.22.700"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/signup_select_type_guide_title"
                android:textColor="@color/gray_800"
                app:layout_constraintBottom_toTopOf="@id/tvGuideContent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvGuideContent"
                style="@style/body.15.500"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/signup_select_type_guide_content"
                android:textColor="@color/gray_600"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvGuideTitle" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clSelectParentCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@drawable/selector_bg_signup_select_type_card"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/clSelectKidCard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvGuideContent"
                app:layout_constraintVertical_bias="0.3">

                <TextView
                    android:id="@+id/tvParentCardTitle"
                    style="@style/subtitle.16.600"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="14dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/signup_select_type_parent_card_title"
                    android:textColor="@color/selector_signup_select_type_card_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvParentCardContent"
                    style="@style/caption.12.500"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="14dp"
                    android:layout_marginTop="12dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/signup_select_type_parent_card_content"
                    android:textColor="@color/selector_signup_select_type_card_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvParentCardTitle" />

                <ImageView
                    android:id="@+id/ivParentCardLogo"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/ic_launcher_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvParentCardContent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clSelectKidCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/selector_bg_signup_select_type_card"
                app:layout_constraintBottom_toBottomOf="@id/clSelectParentCard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/clSelectParentCard"
                app:layout_constraintTop_toTopOf="@id/clSelectParentCard"
                app:layout_constraintVertical_bias="0.3">


                <TextView
                    android:id="@+id/tvKidCardTitle"
                    style="@style/subtitle.16.600"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="14dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/signup_select_type_kid_card_title"
                    android:textColor="@color/selector_signup_select_type_card_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvKidCardContent"
                    style="@style/caption.12.500"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="14dp"
                    android:layout_marginTop="12dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/signup_select_type_kid_card_content"
                    android:textColor="@color/selector_signup_select_type_card_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvKidCardTitle" />

                <ImageView
                    android:id="@+id/ivKidCardLogo"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/ic_launcher_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvKidCardContent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>